# GosChess

./: .gitignore  CMakeLists.txt
GameUtil/: GameInput.cpp  GameInput.h
chess/: CMakeLists.txt
client/: CMakeLists.txt
client/Chess/Computation/: InGameCalculations.cpp  InGameCalculations.hh
client/Chess/Computation/AI/: AICalculations.cpp  AICalculations.hh
client/Chess/Computation/ComputationGlobals/: ComputationGlobals.cpp  ComputationGlobals.hh
client/Chess/Global/: GameGlobals.cpp  GameGlobals.hh
client/Chess/Global/MainOjbects/: GameObjects.cpp  GameObjects.hh
client/Exec/: main.cpp
client/Exec/GamePlay/: GameLoops.cpp  GameLoops.hh  GamePlayFunctional.cpp  GamePlayFunctional.hh
client/Network/: GameNetwork.cpp  GameNetwork.hh
client/Render/: GamePlayRender.cpp  GamePlayRender.hh
client/Render/Globals/: RenderGlobals.cpp  RenderGlobals.hh
client/Render/Menu/: MenuRender.cpp  MenuRender.hh
client/Utility/: GameInput.cpp  GameInput.hh
client/chess/computation/AI/: AICalculations.cpp  AICalculations.h
client/chess/global/: GameGlobals.cpp  GameGlobals.h
client/chess/global/main_objects/: GameObjects.cpp  GameObjects.h
client/exec/: main.cpp
client/exec/game_play/: GameLoops.h  GamePlayFunctional.cpp  GamePlayFunctional.h
client/render/: GamePlayRender.cpp
client/render/globals/: RenderGlobals.cpp
computation/: GameInitFunctional.cpp  GameInitFunctional.h  GameObjects.cpp  GameObjects.h  GamePlayFunctional.cpp  GamePlayFunctional.h
exec/: main.cpp
fake_client/: CMakeLists.txt  main.cpp
global/: BoardAtributtes.cpp  BoardAtributtes.h  GameGlobals.cpp  GameGlobals.h
global/MainGameObjects/: GameObjects.cpp  GameObjects.h
libs/imgui-sfml/debug/include/: imgui.h
libs/sfml/: readme.md
libs/sfml-imgui/lib/: libImGui-SFML.dylib
libs/sfml-imgui/lib/cmake/: ImGui-SFMLConfig-noconfig.cmake  ImGui-SFMLConfig.cmake
libs/sfml/doc/html/: Color_8hpp_source.html  Glsl_8hpp_source.html  Glyph_8hpp_source.html  GpuPreference_8hpp.html  Graphics_8hpp_source.html  Image_8hpp_source.html  Listener_8hpp_source.html  Mouse_8hpp_source.html  RenderTarget_8hpp_source.html  Shader_8hpp_source.html  Shape_8hpp_source.html  SoundSource_8hpp_source.html  Sprite_8hpp_source.html  Text_8hpp_source.html  Transformable_8hpp_source.html  Vertex_8hpp_source.html  Window_2Window_8hpp_source.html  annotated.html  classes.html  classsf_1_1AlResource.html  classsf_1_1CircleShape-members.html  classsf_1_1CircleShape.html  classsf_1_1Clipboard.html  classsf_1_1Clock.html  classsf_1_1Color-members.html  classsf_1_1Color.html  classsf_1_1Context.html  classsf_1_1ConvexShape-members.html  classsf_1_1ConvexShape.html  classsf_1_1Cursor.html  classsf_1_1Drawable.html  classsf_1_1Event.html  classsf_1_1FileInputStream.html  classsf_1_1Font.html  classsf_1_1Ftp.html  classsf_1_1Ftp_1_1DirectoryResponse.html  classsf_1_1Ftp_1_1ListingResponse.html  classsf_1_1Ftp_1_1Response.html  classsf_1_1GlResource.html  classsf_1_1GlResource_1_1TransientContextLock.html  (+126 more)
libs/sfml/include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  ConvexShape.hpp  Font.hpp  Image.hpp  Rect.hpp  RectangleShape.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Sprite.hpp  Texture.hpp  Transformable.hpp  VertexBuffer.hpp  View.hpp
libs/sfml/include/SFML/Network/: Http.hpp  Packet.hpp  SocketSelector.hpp  TcpSocket.hpp  UdpSocket.hpp
render/: GameDraw.cpp  GameDraw.h
resources/Lato2OFL/: OFL.txt  README.txt
server/: CMakeLists.txt  main.cpp
src/ai/: AiConstants.cpp  AiConstants.h  SimpleAi.cpp  SimpleAi.h
src/chess/computation/: InGameCalculations.cpp  InGameCalculations.h
src/chess/computation/AI/: AICalculations.cpp  AICalculations.h
src/chess/computation/computation_globals/: ComputationGlobals.cpp  ComputationGlobals.h
src/chess/global/: GameGlobals.cpp  GameGlobals.h
src/chess/global/MainObjects/: GameObjects.cpp  GameObjects.h
src/chess/global/main_objects/: GameObjects.cpp  GameObjects.h
src/chess_api/computation/: InGameCalculations.cpp  InGameCalculations.h
src/chess_api/computation/computation_globals/: ComputationGlobals.cpp  ComputationGlobals.h
src/chess_api/computation/globals/: ComputationGlobals.h
src/chess_api/global/: GameGlobals.cpp  GameGlobals.h
src/computation/: GamePlayFunctional.cpp  GamePlayFunctional.h  InGameCalculations.cpp  InGameCalculations.h
src/computation/globals/: ComputationGlobals.h
src/exec/: main.cpp
src/exec/GamePlay/: GameLoops.cpp  GameLoops.h  GamePlayFunctional.cpp  GamePlayFunctional.h
src/exec/game_play/: GameLoops.cpp  GameLoops.h  GamePlayFunctional.cpp  GamePlayFunctional.h
src/global/: GameGlobals.cpp  GameGlobals.h  GameObjects.cpp  GameObjects.h
src/global/MainGameObjects/: GameObjects.cpp  GameObjects.h
src/network/: GameNetwok.cpp  GameNetwok.h  GameNetwork.cpp  GameNetwork.h
src/render/: GameDraw.cpp  GameDraw.h  GamePlayRender.cpp  GamePlayRender.h
src/render/globals/: RenderGlobals.cpp  RenderGlobals.h
src/render/menu/: MenuRender.cpp  MenuRender.h
src/util/: GameInput.cpp  GameInput.h
(+12 files in other folders)
